--- a/UI/html/apartments.html
+++ b/UI/html/apartments.html
@@ -70,7 +70,7 @@
                                  <a class="nav-link" href="about.html">About</a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="apart.html">Our Apartments</a>
+                                 <a class="nav-link active" href="apartments.html">Our Apartments</a>
                               </li>
                               <li class="nav-item">
                                  <a class="nav-link" href="gallery.html">Gallery</a>
