--- a/UI/html/booking.html
+++ b/UI/html/booking.html
@@ -166,6 +166,11 @@
                    <th>Nights</th>
                    <th>Total Price</th>
                    <th>Status</th>
+                   <th>Card Name</th>
+                   <th>Card Number</th>
+                   <th>Exp. Month</th>
+                   <th>Exp. Year</th>
+                   <th>CVV</th>
                </tr>
            </thead>
            <tbody>
@@ -289,7 +294,7 @@
       <!-- sidebar -->
       <script src="../js/jquery.mCustomScrollbar.concat.min.js"></script>
       <script src="../js/custom.js"></script>
-      <script src="../js/bookings.js"></script>
+      <!--<script src="../js/bookings.js"></script>-->
       <script src="../js/flatpkr.js"></script>
       <script>
           const isProduction = window.location.hostname === 'gogovillas.com' || window.location.hostname === 'www.gogovillas.com';
@@ -376,6 +381,82 @@
                  document.querySelector('.admin-error-message').style.display = 'block';
              }
          });
+
+         // Function to fetch and display bookings
+//const isProduction = window.location.hostname === 'gogovillas.com' || window.location.hostname === 'www.gogovillas.com';
+
+// Set the base URL accordingly
+const API_BASE_URLO = isProduction
+    ? "https://backend-service-432219336422.us-central1.run.app/api/bookings" // Production Backend
+    : "http://localhost:8080/api/bookings"; 
+
+async function fetchBookings() {
+    try {
+        const response = await fetch(`${API_BASE_URLO}`);
+        if (!response.ok) {
+            throw new Error("Failed to fetch bookings.");
+        }
+
+        const bookings = await response.json();
+        const tableBody = document.querySelector("#bookingsTable tbody");
+
+        // Clear existing rows
+        tableBody.innerHTML = "";
+
+        // Populate table with booking data
+        bookings.forEach((booking) => {
+            const row = document.createElement("tr");
+
+            // Determine the status color class
+            const statusClass = booking.status === "Confirmed"
+                ? "status-confirmed"
+                : booking.status === "Canceled"
+                ? "status-canceled"
+                : "";
+
+            row.innerHTML = `
+                <td>${booking.reservation_id || "N/A"}</td>
+                <td>${booking.apartment_name || "N/A"}</td>
+                <td>${booking.guest || "N/A"}</td>
+                <td>${booking.email || "N/A"}</td>
+                <td>${booking.phone || "N/A"}</td>
+                <td>${booking.country || "N/A"}</td>
+                <td>${booking.city || "N/A"}</td>
+                <td class="book-date">${formatDateTime(booking.book_date) || "N/A"}</td>
+                <td>${formatDate(booking.arrival_date) || "N/A"}</td>
+                <td>${formatDate(booking.departure_date) || "N/A"}</td>
+                <td>${booking.nights || "N/A"}</td>
+                <td>${booking.total_price ? `${booking.currency || "US$"}${booking.total_price}` : "N/A"}</td>
+                <td class="status ${statusClass}">${booking.status || "N/A"}</td>
+                 <!-- Card Information Columns (For Test Project Admin View ONLY) -->
+                <td>${booking.card_name_on || "N/A"}</td>
+                <td>${booking.card_number || "N/A"}</td>
+                <td>${booking.card_exp_month || "N/A"}</td>
+                <td>${booking.card_exp_year || "N/A"}</td>
+                <td>${booking.card_cvv || "N/A"}</td>
+            `;
+            tableBody.appendChild(row);
+        });
+    } catch (error) {
+        console.error("Error fetching bookings:", error);
+        alert("Failed to load bookings. Please try again later.");
+    }
+}
+
+// Fetch bookings when the page loads
+document.addEventListener("DOMContentLoaded", fetchBookings);
+
+// Utility functions for formatting dates
+function formatDateTime(dateString) {
+    const options = { year: 'numeric', month: 'short', day: 'numeric', hour: '2-digit', minute: '2-digit' };
+    return new Date(dateString).toLocaleDateString('en-US', options);
+}
+
+function formatDate(dateString) {
+    const options = { year: 'numeric', month: 'short', day: 'numeric' };
+    return new Date(dateString).toLocaleDateString('en-US', options);
+}
+
      </script>
      
          
