--- a/UI/html/testimonial-admin.html
+++ b/UI/html/testimonial-admin.html
@@ -197,8 +197,8 @@
     const isProduction = window.location.hostname === 'gogovillas.com' || window.location.hostname === 'www.gogovillas.com';
          // Set the base URL accordingly
          const API_BASE_URL = isProduction
-           ? "https://backend-service-432219336422.us-central1.run.app/testimonials" // Production Backend
-           : "http://localhost:8080/testimonials";
+           ? "https://backend-service-432219336422.us-central1.run.app/api/testimonials" // Production Backend
+           : "http://localhost:8080/api/testimonials";
 
         //const API_BASE_URL = "https://backend-service-432219336422.us-central1.run.app/api/testimonials"; // Update with your API URL
 
