--- a/UI/html/userdata.html
+++ b/UI/html/userdata.html
@@ -54,6 +54,10 @@
             position: relative;
         }
 
+        .custom-modal-content h2{
+          color: white;
+        }
+
         /* Add Animation (fade in from top) */
         @keyframes animatetop {
             from {top: -300px; opacity: 0}
